# test-mvvm

./: CMakeLists.txt  README.md  main.cpp
model/: student.h
view/: studentview.cpp  studentview.h
viewmodel/: studentviewmodel.h  studnetviewmodel.cpp
